# skill-forge

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
crates/skill-core/: Cargo.toml
crates/skill-core/src/: convert.rs  lib.rs  model.rs  parser.rs  validate.rs
crates/skill-fs/: Cargo.toml
crates/skill-fs/src/: git.rs  lib.rs  reader.rs  scanner.rs  tree.rs  writer.rs
crates/skill-pack/: Cargo.toml
crates/skill-pack/src/: export.rs  import.rs
crates/tool-core/: Cargo.toml
crates/tool-core/src/: detect.rs  lib.rs  profile.rs  registry.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: copy.rs  create.rs  delete.rs  detail.rs  edit.rs  export_import.rs  files.rs  list.rs  mod.rs  toggle.rs  tools.rs
src/components/layout/: Layout.tsx  Sidebar.tsx  ToolSelector.tsx
src/components/shared/: CodeEditor.tsx  ConfirmDialog.tsx  FileEditorModal.tsx  MarkdownPreview.tsx  SearchInput.tsx  StatusBadge.tsx  TagBadge.tsx  ToolBadge.tsx
src/components/skill/: CreateWizard.tsx  FileTree.tsx  MetadataPanel.tsx  SkillCard.tsx  SkillDetail.tsx  SkillEditor.tsx  SkillList.tsx  SkillToolbar.tsx
src/hooks/: useFileTree.ts  useSkillDetail.ts  useSkills.ts  useSkillsContext.tsx  useTools.ts  useToolsContext.tsx
src/i18n/: en-US.json  zh-CN.json
src/lib/: i18n.ts  tauri.ts
src/types/: index.ts
