[workspace]
members = [
  "src-tauri",
  "crates/tool-core",
  "crates/skill-core",
  "crates/skill-fs",
  "crates/skill-pack",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
