[package]
name = "skill-forge-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "skill_forge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tool-core = { path = "../crates/tool-core" }
skill-core = { path = "../crates/skill-core" }
skill-fs = { path = "../crates/skill-fs" }
skill-pack = { path = "../crates/skill-pack" }
log = "0.4"
